--- a/01.Basic/index16(JSONparse).html
+++ b/01.Basic/index16(JSONparse).html
@@ -30,7 +30,7 @@
         //단, JSON형식의 문자열을 obj로 변경할 때, 아주 엄격한 규칙이 하나 있습니다.
         //키는 반드시 쌍따옴표("")로 묶여야 합니다.
         //var o = JSON.parse('{id: 1, name: "홍길동"}'); **에러**
-        var o = JSON.parse('{"iod": 4, "name": "adam"}');
+        var o = JSON.parse('{"id": 4, "name": "adam"}');
         console.log( o );
         
 
