--- a/04.ElementCreate/index04(노드삭제).html
+++ b/04.ElementCreate/index04(노드삭제).html
@@ -57,7 +57,7 @@
             console.log(list.firstElementChild);
             console.log(list.firstChild);
 
-            list.removeChild(firstElementChild);
+            list.removeChild(list.firstElementChild);
 
         }
 
