--- a/05사이드메뉴만들기/sidebar.html
+++ b/05사이드메뉴만들기/sidebar.html
@@ -8,7 +8,14 @@
 
     <link rel="stylesheet" href="sidebar.css">
 
-
+    <style>
+        .sidenav {
+            width: 0px;
+        }
+        .sidenav.active {
+            width: 100%;
+        }
+    </style>
 
 </head>
 <body>
